--- a/web/src/components/pages/new-home/hero-section/hero-section.css
+++ b/web/src/components/pages/new-home/hero-section/hero-section.css
@@ -311,6 +311,10 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
+
+                        &.disabled {
+                            pointer-events: none;
+                        }
                     }
 
                     .speak {
