619 add our partners include section (#4717)
* feat(home page): add partner with us section

* feat(home page): add partners section

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Khowar (khw) localization of Common Voice

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* feat(home page): show coming soon for non-contributable links

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Cajatambo (qvl) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Quechua Corongo Ancash (qwa) localization of Common Voice

Co-authored-by: jdccinclan <jdccinclan@gmail.com>

* Pontoon: Update Kabardian (kbd) localization of Common Voice

Co-authored-by: Murat Topçu <muratpapsu@gmail.com>

* Pontoon: Update Kabardian (kbd) localization of Common Voice

Co-authored-by: Murat Topçu <muratpapsu@gmail.com>

* Pontoon: Update Georgian (ka) localization of Common Voice

Co-authored-by: G12r <georgianization@outlook.com>

* Pontoon: Update Kabardian (kbd) localization of Common Voice

Co-authored-by: Murat Topçu <muratpapsu@gmail.com>

* Pontoon: Update Kabardian (kbd) localizat

--- a/web/src/components/pages/new-home/hero-section/hero-section.css
+++ b/web/src/components/pages/new-home/hero-section/hero-section.css
@@ -311,6 +311,10 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
+
+                        &.disabled {
+                            pointer-events: none;
+                        }
                     }
 
                     .speak {
@@ -354,7 +358,7 @@
 
                 @media (--xl-up) {
                     width: 50%;
-                    top: 10%;
+                    top: 9%;
                     left: 50%;
                 }
 
