--- a/web/src/components/layout/footer.css
+++ b/web/src/components/layout/footer.css
@@ -64,7 +64,7 @@ footer {
     @media (--xl-up) {
         margin: 0 auto;
         padding: 0.4rem 20px;
-        max-width: var(--desktop-width);
+        max-width: 85rem;
         width: 100%;
         flex-direction: row;
         align-items: center;
@@ -76,7 +76,7 @@ footer {
     }
 
     & a {
-        color: var(--warm-grey);
+        color: var(--white);
 
         &:hover {
             color: var(--blue);
@@ -104,14 +104,24 @@ footer {
         justify-content: space-between;
 
         @media (--xl-up) {
-            max-width: 18rem;
+            max-width: 30rem;
             margin-inline-end: 4rem;
             margin-top: 0;
             padding: 0;
         }
 
+        .text-button {
+            color: var(--white);
+            font-size: 0.9rem;
+            margin-block-end: 16px;
+        }
+
         & a {
-            margin-bottom: 8px;
+            margin-block-end: 16px;
+
+            &:last-of-type {
+                margin-block-end: 0;
+            }
         }
 
         & > div {
@@ -121,7 +131,8 @@ footer {
 
         & .divider-vertical {
             border-inline-end: 1px solid hsl(0deg, 0%, 20%);
-            height: 4.1rem;
+            height: 6.3rem;
+            align-self: center;
         }
     }
 
@@ -146,7 +157,7 @@ footer {
     align-content: center;
     margin: 0 auto;
     width: 100%;
-    max-width: var(--desktop-width);
+    max-width: 85rem;
     padding-inline-start: 20px;
 
     & .logo-container {
