--- a/web/src/components/layout/subscribe-newsletter.css
+++ b/web/src/components/layout/subscribe-newsletter.css
@@ -66,7 +66,7 @@
     }
 
     & .submit-button {
-        background-color: var(--blue);
+        background-color: var(--light-purple);
 
         & .icon {
             height: 12px;
