620 update footer links and link colors (#4718)
* feat(home page): fix footer responsiveness

* chore: update footer links

* chore(home page): update featured in icons

--- a/web/src/components/layout/footer.css
+++ b/web/src/components/layout/footer.css
@@ -63,8 +63,8 @@ footer {
 
     @media (--xl-up) {
         margin: 0 auto;
-        padding: 0.4rem 0;
-        max-width: var(--desktop-width);
+        padding: 0.4rem 20px;
+        max-width: 85rem;
         width: 100%;
         flex-direction: row;
         align-items: center;
@@ -76,48 +76,10 @@ footer {
     }
 
     & a {
-        color: var(--warm-grey);
+        color: var(--white);
 
         &:hover {
             color: var(--blue);
-        }
-    }
-
-    & .logo-container {
-        display: flex;
-        flex: 1;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 4rem;
-
-        @media (--xl-up) {
-            flex-direction: column;
-            min-width: 9rem;
-            margin-inline-end: 8rem;
-            margin-top: 0;
-        }
-
-        & .Logo {
-            font-size: 1rem;
-            padding-inline-end: 4rem;
-        }
-
-        & .Logo,
-        & .LogoImage {
-            height: 2.5rem;
-            max-height: 2.5rem;
-
-            @media (--xl-up) {
-                height: auto;
-            }
-        }
-
-        & .license {
-            font-size: 0.7rem;
-
-            @media (--xl-up) {
-                margin-top: 1.5rem;
-            }
         }
     }
 
@@ -142,14 +104,24 @@ footer {
         justify-content: space-between;
 
         @media (--xl-up) {
-            max-width: 18rem;
+            max-width: 30rem;
             margin-inline-end: 4rem;
             margin-top: 0;
             padding: 0;
         }
 
+        .text-button {
+            color: var(--white);
+            font-size: 0.9rem;
+            margin-block-end: 16px;
+        }
+
         & a {
-            margin-bottom: 8px;
+            margin-block-end: 16px;
+
+            &:last-of-type {
+                margin-block-end: 0;
+            }
         }
 
         & > div {
@@ -159,7 +131,8 @@ footer {
 
         & .divider-vertical {
             border-inline-end: 1px solid hsl(0deg, 0%, 20%);
-            height: 4.1rem;
+            height: 6.3rem;
+            align-self: center;
         }
     }
 
@@ -177,6 +150,54 @@ footer {
 
     & *:focus.focus-visible {
         outline: 1px solid white;
+    }
+}
+
+#logo-license-text {
+    align-content: center;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 85rem;
+    padding-inline-start: 20px;
+
+    & .logo-container {
+        display: flex;
+        flex: 1;
+        flex-direction: row;
+        margin-top: 4rem;
+        margin-block-end: 4rem;
+
+        @media (--xl-up) {
+            min-width: 9rem;
+            margin-top: 0;
+        }
+
+        & .Logo {
+            font-size: 1rem;
+        }
+
+        & .Logo,
+        & .LogoImage {
+            height: 2.5rem;
+            max-height: 2.5rem;
+
+            @media (--lg-down) {
+                margin-inline-end: 2rem;
+            }
+
+            @media (--xl-up) {
+                height: 150px;
+            }
+        }
+
+        & .license {
+            font-size: var(--font-size-xs);
+            color: var(--white);
+
+            a {
+                color: var(--light-purple);
+            }
+        }
     }
 }
 
@@ -202,10 +223,10 @@ footer {
     & .icons {
         width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
 
         & > * {
-            margin: 0 21px;
+            margin: 0 8px;
         }
     }
 }
@@ -214,7 +235,7 @@ footer {
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
-    flex: 1.5;
+    /* flex: 1.5; */
     align-items: center;
 
     @media (--xl-up) {
